--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "serverless-cloud-elements-plugin": "^0.1.3"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
