--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "pako": "^1.0.6"
   },
   "devDependencies": {
     "serverless-cloud-elements-plugin": "^0.1.3"
