--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "stuff",
   "main": "index.js",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "aws-sdk": "^2.348.0",
     "flatted": "^1.0.3",
-    "json_prototype": "^1.0.1",
     "pako": "^1.0.6",
-    "serialize-javascript": "^1.5.0"
+    "regenerator-runtime": "^0.12.1",
+    "superagent": "^3.8.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "serverless-cloud-elements-plugin": "^0.1.3"
   },
   "scripts": {
